--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
           xmlns:tools="http://schemas.android.com/tools"
           package="ua.r4mste1n.digitals.big.bigdigappb">
 
-    <permission android:name="ua.r4mste1n.digitals.big.bigdigappa.READ_WRITE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="ua.r4mste1n.digitals.big.bigdigappa.READ_WRITE"/>
 
     <application
         android:name=".root.App"
