--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="ua.r4mste1n.digitals.big.bigdigappa.READ_WRITE"/>
+    <uses-permission android:name="android.permission.READ_USER_DICTIONARY"/>
 
     <application
         android:name=".root.App"
